# fast-array-utils

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .taplo.toml  README.rst  pyproject.toml
.github/workflows/: ci-gpu.yml  ci.yml  publish.yml
docs/: conf.py  conv.rst  index.rst  numba.rst  stats.rst  testing.rst  typing.rst
src/fast_array_utils/: __init__.py  _asarray.py  _checks.py  _import.py  _numba.py  _patches.py  _validation.py  numba.py  types.py  typing.py  utils.py
src/fast_array_utils/_plugins/: __init__.py  dask.py  numba_sparse.py
src/fast_array_utils/conv/: __init__.py  _asarray.py  _to_dense.py
src/fast_array_utils/conv/scipy/: __init__.py  _to_dense.py
src/fast_array_utils/numba/: __init__.py  _parallel_runtime.py
src/fast_array_utils/scipy/: __init__.py  _to_dense.py  to_dense.py
src/fast_array_utils/stats/: __init__.py  _generic_ops.py  _is_constant.py  _mean.py  _mean_var.py  _min_max.py  _power.py  _sum.py  _typing.py  _utils.py
src/testing/fast_array_utils/: __init__.py  __init__.pyi  _array_type.py  _private.py  array_type.py  pytest.py
stubs/: cupy.pyi
stubs/cupyx/scipy/: sparse.pyi
stubs/dask/array/: __init__.pyi  core.pyi  overlap.pyi
stubs/numba/: __init__.pyi
stubs/numba/core/: types.pyi
tests/: conftest.py  test_asarray.py  test_jax.py  test_numba.py  test_numpy_scipy_sparse.py  test_pytorch.py  test_sparse.py  test_stats.py  test_test_utils.py  test_to_dense.py
tests/data/: pbmc68k_reduced_raw_csr.npz
typings/: cupy.pyi  h5py.pyi
typings/cupy/: __init__.pyi  cuda.pyi
typings/cupy/_core/: __init__.pyi  core.pyi
typings/cupy/_creation/: from_data.pyi
typings/cupyx/scipy/: sparse.pyi
typings/cupyx/scipy/sparse/: __init__.pyi  _base.pyi  _compressed.pyi  _coo.pyi  _csc.pyi  _csr.pyi
typings/dask/: utils.pyi
typings/dask/array/: __init__.pyi  core.pyi  overlap.pyi  reductions.pyi  wrap.pyi
typings/llvmlite/: ir.pyi
typings/numba/: __init__.pyi  extending.pyi
typings/numba/core/: base.pyi  cgutils.pyi  config.pyi  extending.pyi  imputils.pyi  pythonapi.pyi  types.pyi
typings/numba/core/datamodel/: __init__.pyi  manager.pyi  models.pyi  new_models.pyi  registry.pyi
typings/numba/core/typing/: templates.pyi  typeof.pyi
typings/sklearn/utils/: sparsefuncs.pyi
